--- a/3/index.html
+++ b/3/index.html
@@ -30,7 +30,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         <div id="ad"></div>
-        <script src="main.js"></script>
+        <script src="3.js"></script>
         <script>
             var littleViewer = new LittleViewer('ad');
             littleViewer.start();
